tests/baselines/reference/assignLambdaToNominalSubtypeOfFunction.errors.txt
tests/cases/compiler/assignLambdaToNominalSubtypeOfFunction.ts(7,4): error TS2737: Property 'x' is missing in type (a: any, b: any) => boolean' but present in type 'IResultCallback'.
tests/cases/compiler/assignLambdaToNominalSubtypeOfFunction.ts(8,4): error TS2737: Property 'x' is missing in type (a: any, b: any) => boolean' but present in type 'IResultCallback'.


==== tests/cases/compiler/assignLambdaToNominalSubtypeOfFunction.ts (2 errors) ====
    interface IResultCallback extends Function {
        x: number;
    }
    
    function fn(cb: IResultCallback) { }
    
    fn((a, b) => true);
       ~~~~~~~~~~~~~~
!!! error TS2737: Property 'x' is missing in type (a: any, b: any) => boolean' but present in type 'IResultCallback'.
    fn(function (a, b) { return true; })
       ~~~~~~~~
!!! error TS2737: Property 'x' is missing in type (a: any, b: any) => boolean' but present in type 'IResultCallback'.
    